--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,3 +8,16 @@
     document.body.classList.add(`skin-${skin}`);
   });
 </script>
+<link
+  id="skin-style"
+  rel="stylesheet"
+  href="{{ '/assets/css/default.css' | relative_url }}">
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const skin = localStorage.getItem("skin") || "default";
+    document
+      .getElementById("skin-style")
+      .setAttribute("href", `/assets/css/${skin}.css`);
+    document.body.classList.add(`skin-${skin}`);
+  });
+</script>
