added multiple theme selection via a theme picker.

--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -1,6 +1,8 @@
-assets/css/dark.scss
 ---
 ---
-
 @import "minimal-mistakes/skins/dark";
 @import "minimal-mistakes";
+
+:root {
+  --current-skin: dark;
+}
