--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -1,6 +1,8 @@
-assets/css/default.scss
 ---
 ---
-
-@import "minimal-mistakes/skins/default";  // skin variables & overrides
+@import "minimal-mistakes/skins/dark";  // skin variables & overrides
 @import "minimal-mistakes";                // rest of the theme
+
+:root {
+  --current-skin: default;
+}
