Fixing theme picker

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,1 +1,2 @@
 <link id="skin-style" rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/theme-picker.css' | relative_url }}">
